# raylib-practice

./: CMakeLists.txt  README.md
life/: CMakeLists.txt  LICENSE  README.md
life/lib/: Board.cpp  Board.hpp
life/resources/shaders/: default.fs
life/src/: main.cpp
snake/: CMakeLists.txt  README.md
snake/src/: main.cpp
